--- a/ManageAppointments/ManageAppointments/ManageAppointments.csproj
+++ b/ManageAppointments/ManageAppointments/ManageAppointments.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041.0</TargetFrameworks>
+		<TargetFrameworks>net7.0-android;net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
 		<OutputType>Exe</OutputType>
@@ -50,10 +50,12 @@
 
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\appointments.png" />
 	  <None Remove="Resources\Images\april.png" />
 	  <None Remove="Resources\Images\august.png" />
 	  <None Remove="Resources\Images\december.png" />
 	  <None Remove="Resources\Images\february.png" />
+	  <None Remove="Resources\Images\health.png" />
 	  <None Remove="Resources\Images\january.png" />
 	  <None Remove="Resources\Images\july.png" />
 	  <None Remove="Resources\Images\june.png" />
