--- a/ManageAppointments/ManageAppointments/ManageAppointments.csproj
+++ b/ManageAppointments/ManageAppointments/ManageAppointments.csproj
@@ -77,8 +77,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Syncfusion.Maui.DataForm" Version="21.2.4" />
-		<PackageReference Include="Syncfusion.Maui.Scheduler" Version="21.2.4" />
+		<PackageReference Include="Syncfusion.Maui.DataForm" Version="*" />
+		<PackageReference Include="Syncfusion.Maui.Scheduler" Version="*" />
 	</ItemGroup>
 
 	<ItemGroup>
